tests/diagnostic_golden_cc/semantic_concrete_abstract_type_decl.f90
module m
  type, abstract :: base_t
  end type
contains
  subroutine s()
    type(base_t) :: x
  end subroutine
end module
